vlib/v/checker/tests/import_not_found_err.vv
import notexist
fn main() {
	println(notexist.name)
}
